--- a/9-9.md
+++ b/9-9.md
@@ -9,7 +9,7 @@
 	+ run by the command 'gcc' -o <output filename> <inputFile.c>
 
 # Types of Errors
-	+ **Syntactic** Errors
+	+ __Syntactic__ Errors
 	+ **Semantic** Errors
 
 # Make and Makefiles
@@ -54,3 +54,9 @@
 
 # Symbols
 	+ ASCII character set conatins 128 different Symbols
+
+# Colors
+	+ 3 colors are used (Red, Green, Blue)
+		- Each color can have a different value (0-255)
+	+ All colors combined = White
+	+ Absence of all colors = Black
