--- a/9-9.md
+++ b/9-9.md
@@ -9,8 +9,8 @@
 	+ run by the command 'gcc' -o <output filename> <inputFile.c>
 
 # Types of Errors
-	+ __Syntactic__ Errors
-	+ **Semantic** Errors
+	+ Syntactic Errors
+	+ Semantic Errors
 
 # Make and Makefiles
 	+ sets up how the source code will be handled and compiled
@@ -31,12 +31,12 @@
 	+ Processor Stuff -> Code
 
 # Numbers
-	+ **base** means the number of symbals used
+	+ base means the number of symbals used
 	+ biggest number you can write in n bits = 2^n - 1
 
 ## Binary
 	+ Instead of 0-9, only use 0-1
-	+ Binary uses **base 2** notation (8 digits AKA bits)
+	+ Binary uses base 2 notation (8 digits AKA bits)
 ### Two's Complement Notation
 	+ Two bits are added to a standard 8 bit number 
 	+ To make the number negative, change the the leftmost bit to '1'
@@ -44,13 +44,13 @@
 	+ 9th bit is extra and is not used
 
 ## Hex
-	+ Hexadecimal numbers use **base 6** notation
+	+ Hexadecimal numbers use base 6 notation
 		- allows you to represent a 4 bit quantity with one symbol
 
 # Floating-point Decimals
 	+ Uses Scientific Notation to represent decimal numbers
-		- **Mantissa** = significant number
-		- **Exponent** = decimal point adjustment
+		- Mantissa = significant number
+		- Exponent = decimal point adjustment
 
 # Symbols
 	+ ASCII character set conatins 128 different Symbols
