--- a/9-9.md
+++ b/9-9.md
@@ -6,11 +6,11 @@
 
 # GNU C Compiler
 + frontend for cc1
-+ run by the command 'gcc' -o <output filename> <inputFile.c>
++ run by the command gcc -o <output filename> <inputFile.c>
 
 # Types of Errors
 + Syntactic Errors
-+ Semantic Errors
++ Symantic Errors
 
 # Make and Makefiles
 + sets up how the source code will be handled and compiled
