--- a/9-12.md
+++ b/9-12.md
@@ -1,12 +1,12 @@
 # Boolean Algebra
 * Only numbers - 0 and 1
 * Only operations are:
-	- __Adding__
+	- __Adding__ - called OR
 		+ 0 + 0 -> 0
 		+ 0 + 1 -> 1
 		+ 1 + 0 -> 1
 		+ 1 + 1 -> 1
-	- __Multiplication__
+	- __Multiplication__ - called AND
 		+ 0 * 0 -> 0
 		+ 0 * 1 -> 0
 		+ 1 * 0 -> 0
