--- a/9-12.md
+++ b/9-12.md
@@ -13,4 +13,19 @@
 		+ 1 * 1 -> 1
 		+ 
 * Works with a true/false type value system
-* 
+
+## AND
+| A | B | OUT |
+|---|---|-----|
+| F | F | F   |
+| F | T | F   |
+| T | F | F   |
+| T | T | T   |
+
+## OR
+| A | B | OUT |
+|---|---|-----|
+| F | F | F   |
+| F | T | T   |
+| T | F | T   |
+| T | T | T   |
