--- a/9-12.md
+++ b/9-12.md
@@ -1,12 +1,12 @@
 # Boolean Algebra
 * Only numbers - 0 and 1
 * Only operations are:
-	- __Adding__ - called OR
+	- **Adding** - called OR
 		+ 0 + 0 -> 0
 		+ 0 + 1 -> 1
 		+ 1 + 0 -> 1
 		+ 1 + 1 -> 1
-	- __Multiplication__ - called AND
+	- **Multiplication** - called AND
 		+ 0 * 0 -> 0
 		+ 0 * 1 -> 0
 		+ 1 * 0 -> 0
@@ -29,3 +29,18 @@
 | F | T | T   |
 | T | F | T   |
 | T | T | T   |
+
+### Example:
+
+* A -> Boolean Value
+	- A + 0 -> A
+	- A * 0 -> 0
+	- A + 1 -> 1
+	- A * 1 -> A
+
+
+
+
+
+
+
