--- a/9-12.md
+++ b/9-12.md
@@ -31,14 +31,15 @@
 | T | T | T   |
 
 ### Example:
-
 * A -> Boolean Value
 	- A + 0 -> A
 	- A * 0 -> 0
 	- A + 1 -> 1
 	- A * 1 -> A
 
-
+* A 'bar' is equal to the _opposite_ of A
+	- A + Ab -> 1
+	- A * Ab -> 0
 
 
 
