--- a/9-12.md
+++ b/9-12.md
@@ -14,7 +14,7 @@
 		+ 
 * Works with a true/false type value system
 
-## AND
+### AND
 | A | B | OUT |
 |---|---|-----|
 | F | F | F   |
@@ -22,7 +22,7 @@
 | T | F | F   |
 | T | T | T   |
 
-## OR
+### OR
 | A | B | OUT |
 |---|---|-----|
 | F | F | F   |
@@ -30,7 +30,7 @@
 | T | F | T   |
 | T | T | T   |
 
-### Example:
+#### Example:
 * A -> Boolean Value
 	- A + 0 -> A
 	- A * 0 -> 0
