--- a/9-12.md
+++ b/9-12.md
@@ -31,6 +31,7 @@
 | T | T | T   |
 
 #### Example:
+***
 * A -> Boolean Value
 	- A + 0 -> A
 	- A * 0 -> 0
@@ -40,8 +41,39 @@
 * A 'bar' is equal to the _opposite_ of A
 	- A + Ab -> 1
 	- A * Ab -> 0
+***
+
+# Electricity
+* moves around a computer much like water in a plumbing system
+	- **capacitors** are like buckets that can store water (power)
+	- **transistors** control the flow of power on/off
+* the **ground** wire on a power supply connects to a chain that connects to ground
+* a **switch** opens and closes to cut-off or supply power
+	- two switches in a line are equal to a logical **AND** operator
+		+ they both have to be in the ON position to supply power
+	- two switches running in paralell are equal to a logical **OR** operator
+		+ if either one of them is turned ON, power will be supplied
+* Lots of power = lots of heat
+	- lots of power also needs big batteries (if mobile)
+
+## Digital Gates
+* a **gate** stops the flow of electrons through it
+	- will output a predetermined amount of power
+	- can determine if certain boolean conditions are met
+	- several can be hooked up in sequence to form complex _boolean algebra_
+	- curved symbol is an **or**, a flat symbol is the **and** version
+	- you can start with just NAND gates and end up with a fully functional PC
+	- types of gates:
+		+ AND
+		+ OR
+		+ NOT
+		+ XOR also known as _exclusive or_ 
+		+ NAND also known as _not and_
+* **multiplexor** can select one input out of many and send it to an output
+* **propogation delay** is the time it takes for power to reach the proper level for the state
+	- limits how fast we can build machines (overclocking too fast can cause trouble)
+	- 
 
 
-
-
-
+## Demorgans Theoroms
+* useful when needing to simplifying an expression
