--- a/9-12.md
+++ b/9-12.md
@@ -72,8 +72,10 @@
 * **multiplexor** can select one input out of many and send it to an output
 * **propogation delay** is the time it takes for power to reach the proper level for the state
 	- limits how fast we can build machines (overclocking too fast can cause trouble)
-	- 
 
 
 ## Demorgans Theoroms
 * useful when needing to simplifying an expression
+
+### LAB NOTES
+* use control-c to terminate the loop
