updated class notes

--- a/9-26.md
+++ b/9-26.md
@@ -24,7 +24,74 @@
 * `JNE address1` means '**J**ump if **N**ot **E**qual'
     - only causes a jump if the associated _compare_ evaluates to false
 
+# Cycsi - Instruction Set Architecture (ISA)
+* not all _mnemonics_ will be the same accross all machines and assemblers
+* Machine has to be told specifically told what to do
 
+### Data Movement
+* to move data, a **MOV** command is used, which actually copies data from source to destination
+* two types of memory known to the machine
+    - **Register**: Inside the chip
+    - **RAM**: Outside the chip
+* Pentium chips require two moves to complete the process (can't go from place to place in memory)
+    - one move into the chip
+    - one move off the chip
+
+### Arithmetic
+* **ADD, SUB, MUL, DIV** operations are all standard
+    - some machines don't include specific multiply/divide methods
+* Pentium can only add two numbers when one is on the chip
+    - its even faster to bring both numbers on the chip
+* takes 2 operands: source and destination
+    - the result is placed at the destination address
+
+### Logic
+* Standard Boolean operators:
+    - **AND, OR, XOR, NOT**
+        + these operate bitwise (except NOT which complements all the bits)
+        + AND can be used to set a bit
+        + XOR can be used to flip a bit
+    - each takes two operands, source and destination
+        + final result is stored in the desitination
+
+## Control Instructions
+
+### Unconditional Branch
+* we will provide the classic 'jump' instruction
+    - **JMP** dest
+
+### Conditional Branch
+* these jumps only occur according to certain values of the machines _status bits_
+
+### Procedures
+* needed to call and return subroutines (functions)
+    - **CALL** dest 
+        + current address is stored in a stack so data isn't lost after the jump to destination
+        + like a _jump_ with memory
+    - **RET**
+        + returns things to the address stored on the stack
+            * pops the most recent element from stack
+        + allows for recursion and things like that
+
+### Miscellaneous Instructions
+* need a way to send parameters to procedures
+    - **PUSH** source
+    - **POP** destination
+
+### Input/Output
+* Simple Algorithm for adding numbers from input
+* user inputs a number (1 for example)
+* user inputs second number (2 for example)
+    - first number is multiplied by 10
+    - second number is added to the first
+* this process continues for each subsequent digit
+
+### Encoding Instructions
+* there needs to be a way to encode operands with the instructions attached to them
+
+### Office Hours
+* Come see the professor!
+    - He is available before class and on Saturdays
 
 ###### Flow of a Conditional Statement in Assembly
 ```
