--- a/10-03.md
+++ b/10-03.md
@@ -137,7 +137,7 @@ while(true) {
 * AND
 * OR
 * XOR
-* NOT (NAND)
+* NOT
 
 ## Status Flags
 * ALU is the only component that can create a status indicating something has changed
