added notes and exam review from wednesday

--- a/11-07.md
+++ b/11-07.md
@@ -2,6 +2,7 @@
 * In a **single-cycle machine** everything happens in one loop of the four step
     - this can be bad, because it is leaving things idle that could be working
 * The idea of superscalar is that one machine can control multiple devices at the same time
+    - for Speed!
 * with multiple pathways, a register/memory cell can perform multiple _reads_, but only one _write_ at a time
 
 ### Alternative to the single-cycle method
